--- a/assets/css/longting.css
+++ b/assets/css/longting.css
@@ -19,3 +19,12 @@ a{
     opacity: 0;
     font-size: 40px;
 }
+.product-banner {
+    width: 100%;
+    height: 160px;
+    background-image: url("//www.dmagic.cn/images/IconS/jpg/1336.jpg");
+    line-height: 160px;
+    font-size: 35px;
+    text-align: center;
+    color: white;
+  }
